--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -141,12 +141,19 @@ osc=no
 
 # Custom
 
+# Screenshot is png
+screenshot-format=png
+screenshot-png-compression=9
+
 # Loop infinitely .webm files
 [extension.webm]
 loop-file=inf
 
 # Max out at 1080p
-ytdl-format=bestvideo[height<=?1080]+bestaudio/best
+#ytdl-format=bestvideo[height<=1080]+bestaudio/best
+#ytdl-format=bestvideo[height<=1080]+bestaudio/best[height<=1080]
+ytdl-format=bestvideo[ext=mp4][width<=1920][height<=1080]+bestaudio[ext=m4a]
+#script-opts=ytdl_hook-ytdl_path=/usr/local/bin/yt-dlp
 
 # profile=gpu-hq
 # glsl-shaders="~~/shaders/Anime4K_Upscale_CNN_L_x2_Denoise.glsl:~~/shaders/Anime4K_Auto_Downscale_Pre_x4.glsl:~~/shaders/Anime4K_Deblur_DoG.glsl:~~/shaders/Anime4K_DarkLines_HQ.glsl:~~/shaders/Anime4K_ThinLines_HQ.glsl:~~/shaders/Anime4K_Upscale_CNN_M_x2_Deblur.glsl"
